tests/fail/invalid_mutually_recursive_record_declaration.err
Semantic Error: Undefined type Men of the field #1 of the record Woman at line 9.
